# Haseeb_Online_Mart

./: compose.yaml
inventory_service/: pyproject.toml
inventory_service/app/: main.py  settings.py
inventory_service/app/api/: inventory_api.py
inventory_service/app/curd/: stock_curd.py
inventory_service/app/model/: stock_model.py
order_service/: pyproject.toml
order_service/app/: main.py  settings.py
order_service/app/api/: cart_api.py  order_api.py
order_service/app/curd/: cart_crud.py  cart_crud_controllers.py  order_components.py  order_crud.py  order_crud_controllers.py
order_service/app/models/: order_models.py  payment_auth_models.py
order_service/app/utils/: auth_admin.py
payment_service/: Dockerfile
product_service/app/: main.py
product_service/app/api/: categ_api.py  product_api.py
product_service/app/curd/: category_curd.py  product_curd.py
product_service/app/models/: categ_auth_model.py  product_model.py
product_service/app/s3_config/: aws_s3.py
product_service/app/utils/: admin_auth.py
user_service/: .env  Dockerfile  pyproject.toml
user_service/app/: main.py
user_service/app/api/: admin_api.py  user_api.py
user_service/app/curd/: admin_curd.py  kong_controller.py  users_curd.py
user_service/app/models/: user_schemas.py
user_service/app/utils/: auth.py  kafka_producer.py
