[tool.poetry]
name = "User Service"
version = "0.1.0"
description = ""
authors = ["Abdul Haseeb <abdulhaseeb065@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiokafka = "^0.10.0"
sqlmodel = "^0.0.18"
cloudinary = "^1.40.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
boto3 = "^1.34.131"
protobuf = "^5.27.3"
mypy = "^1.11.1"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"
psycopg = {extras = ["binary"], version = "^3.1.19"}
python-multipart = "^0.0.9"
passlib = {extras = ["byrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
types-passlib = "^1.7.7.20240327"
types-python-jose = "^3.3.4.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
